--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
   body {
@@ -12,8 +13,8 @@
   font-family: 'Outfit', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #F5F5F5;
-  color: #151515;
+  background-color: #151515;
+  color: #F5F5F5;
 }
 -webkit-scrollbar-thumb {
   width: 10rem;
@@ -24,4 +25,8 @@ code {
     monospace;
 }
 
+h3 {
+  color: white;
+  align-items: center;
+}
 
