--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
+  overflow-y: scroll;
 }
 
   body {
@@ -15,7 +16,7 @@
   -moz-osx-font-smoothing: grayscale;
   background-color: #F5F5F5;
   color: #151515;
-    overflow-y: scroll;
+  overflow: scroll;
 }
 
 
