--- a/src/pages/globalstyles.css
+++ b/src/pages/globalstyles.css
@@ -6,13 +6,30 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-align: center;
-    margin-top: 7rem;
+    margin-top: 5rem;
 }
 
-.game-card {
+.game-card-container {
+    margin-top: 1rem;
     min-height: 80vh;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    width: 100%;
+    grid-template-columns: repeat(1, 1fr);
     grid-column-gap: 3rem;
     grid-row-gap: 3rem;
+    place-items: center;
 }
+@media (min-width: 768px) {
+    .game-card-container {
+    grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media (min-width: 1080px) {
+    .game-card-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+
+
+
